python/src/rabbit/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  rules:
  # Redirect is set in /etc/hosts as `127.0.0.1 rabbitmq-manager.com`
  - host: rabbitmq-manager.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
